--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>My cards</title>
-  <link rel="stylesheet" type="text/css" href="mystyles.css">
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
+  <div class="box">
+    <div class="card" id="card-sedans">
+      <img src="./images/icon-sedans.svg"/>
+      <h2>SEDANS</h2>
+      <p>Choose a sedan for its
+      <br/>affordability and excellent  
+      <br/>fuel economy. Ideal for
+      <br/>cruising in the city or on
+      <br/>your next road trip.</p>
+      <button>Learn more</button>
+    </div>
+    <div class="card" id="card-suvs">
+      <img src="./images/icon-suvs.svg"/>
+      <h2>SUVS</h2>
+      <p>Take an SUV for it's spacious
+      <br/>interior, power, and  
+      <br/>versatility. Perfect for your
+      <br/>next family vacation and
+      <br/>off-road adventures</p>
+      <button>Learn more</button>
+    </div>
+    <div class="card" id="card-luxury">
+      <img src="./images/icon-luxury.svg"/>
+      <h2>LUXURY</h2>
+      <p>Cruise in the best car brands  
+      <br/>without the bloated prices.
+      <br/>Enjoy the enhanced comfort
+      <br/>of a luxury rental and arrive
+      <br/>in style.</p>
+      <button>Learn more</button>
+    </div>
 
+  </div>
   <div class="attribution">
-    Autor del ejercicio <a href="#">Majo Casanova</a>.
+    <p>Autor del ejercicio <a href="#">Majo Casanova</a>.</p>
   </div>
 </body>
 </html>
