--- a/index.html
+++ b/index.html
@@ -19,31 +19,34 @@
       <img src="./images/icon-sedans.svg"/>
       <h2>SEDANS</h2>
       <p>Choose a sedan for its
-      <br/>affordability and excellent  
-      <br/>fuel economy. Ideal for
-      <br/>cruising in the city or on
-      <br/>your next road trip.</p>
-      <button>Learn more</button>
+      <br>affordability and excellent  
+      <br>fuel economy. Ideal for
+      <br>cruising in the city or on
+      <br>your next road trip.</p>
+      <br><br>
+      <button id="b-sedans">Learn more</button>
     </div>
     <div class="card" id="card-suvs">
       <img src="./images/icon-suvs.svg"/>
       <h2>SUVS</h2>
       <p>Take an SUV for it's spacious
-      <br/>interior, power, and  
-      <br/>versatility. Perfect for your
-      <br/>next family vacation and
-      <br/>off-road adventures</p>
-      <button>Learn more</button>
+      <br>interior, power, and  
+      <br>versatility. Perfect for your
+      <br>next family vacation and
+      <br>off-road adventures</p>
+      <br><br>
+      <button id="b-suvs">Learn more</button>
     </div>
     <div class="card" id="card-luxury">
       <img src="./images/icon-luxury.svg"/>
       <h2>LUXURY</h2>
       <p>Cruise in the best car brands  
-      <br/>without the bloated prices.
-      <br/>Enjoy the enhanced comfort
-      <br/>of a luxury rental and arrive
-      <br/>in style.</p>
-      <button>Learn more</button>
+      <br>without the bloated prices.
+      <br>Enjoy the enhanced comfort
+      <br>of a luxury rental and arrive
+      <br>in style.</p>
+      <br><br>
+      <button id="b-luxury">Learn more</button>
     </div>
 
   </div>
